[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/fonts/default_italic.tres" type="FontFile" id=1]
[ext_resource path="res://scenes/popups/import_progress/ImportProgressPopup.gd" type="Script" id=2]
[ext_resource path="res://resources/fonts/default_bold.tres" type="FontFile" id=3]

[node name="ImportProgressPopup" type="Popup"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -423.5
offset_top = -252.0
offset_right = 423.5
offset_bottom = 252.0
exclusive = true
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 30.0
offset_right = -50.0
offset_bottom = -25.0

[node name="Import" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
offset_right = 747.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource( 3 )
text = "Importing configuration from %s..."
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
offset_top = 177.0
offset_right = 747.0
offset_bottom = 272.0
size_flags_vertical = 6
theme_override_constants/separation = 25

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
offset_right = 747.0
offset_bottom = 32.0

[node name="MajorProgress" type="ProgressBar" parent="VBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
offset_right = 747.0
offset_bottom = 14.0
step = 1.0

[node name="Major" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 18.0
offset_right = 747.0
offset_bottom = 32.0
text = "Importing..."
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
offset_top = 57.0
offset_right = 747.0
offset_bottom = 95.0

[node name="MinorProgress" type="ProgressBar" parent="VBoxContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
offset_right = 747.0
offset_bottom = 14.0
step = 1.0

[node name="Minor" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
offset_top = 18.0
offset_right = 747.0
offset_bottom = 38.0
theme_override_fonts/font = ExtResource( 1 )
text = "Importing..."
align = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
offset_top = 429.0
offset_right = 747.0
offset_bottom = 449.0
theme_override_fonts/font = ExtResource( 1 )
text = "This may take a long time to finish, please wait..."
align = 1
